--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "server": "npx json-server --watch db.json"
   },
   "devDependencies": {
+    "@iconify/tailwind": "^0.1.4",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
